--- a/TT2019-B003.tex
+++ b/TT2019-B003.tex
@@ -66,7 +66,7 @@
 			\begin{large}
 				\begin{center}
 					Integrantes:\\
-					Carrillo Fernández Jerry\\
+					Carrillo Fernández Gerardo\\
 					Blancas Pérez Bryan Israel\\
 					Morales González Diego Arturo\\
 					Paredes Hernández Pedro Antonio\\
